Update for Task 986 - Build a scaling feature (offset / slope) for Weather Station/ Meter/ Inverter devices

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,6 +40,7 @@ UPDATE.ERROR = Update data error
 DELETE.SUCCESS = Delete data success
 RESTORE.SUCCESS = Restore data success
 DELETE.ERROR = Delete data error
+SCALE.ERROR = Invalid scale expressions
 CUSTOMER.NOT_SUCH = Unvalid customer
 SHOP.NOT_SUCH = Unvalid shop
 DATA.NO_DATA = Not data such
