Send pdf custom report

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -28,7 +28,7 @@ SAVE.USING = It's being used
 EMAIL.ERROR = There was an error sending the mail
 SENDMAIL.ERROR = Sent mail error
 VALIDATE.ERROR = Validate error
-VALIDATE.EMAIL = Email is required
+VALIDATE.EMAIL = Please enter valid email
 SAVE.SUCCESS = Save data success
 SAVE.ERROR =  Save data error 
 GET.SUCCESS = Get data success
