WEBDEV-1256 - Dev - Hardware Control Dashboard

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -59,6 +59,8 @@ LOGIN_EMAIL.EXIST = Login email is exist
 REVIEWS_URL_EXITS = Review URL is exist
 WEBSITE_EXITS = Website URL is exist
 EMPLOYEE.ADMIN_RESET_PASSWORD = reset password is successful. Please, check your email
+OTP.SUCCESS = Verified successfully
+OTP.ERROR = Verification failed. Please try again
 
 #error type
 err_type.email = email format unvalid
